Some touch-ups to index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!-- Curious how I made this?
-
-https://threejs.org/examples/#webgl_buffergeometry_drawrange
-
-https://3dtransforms.desandro.com/cube
--->
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -14,7 +7,11 @@ https://3dtransforms.desandro.com/cube
         <title>Raymond Wong // raymond.exe</title>
     </head>
     <body style="background-color:black;">
+        <!-- Wait, it's all a canvas!? -->
         <canvas class="webgl"></canvas>
+        <!-- Always has been 🔫 -->
         <script type="module" src="index.js"></script>
     </body>
 </html>
+<!-- Made by yours truly 😉 ~Raymond -->
+<!-- https://github.com/Raymond-exe/raymond-exe.github.io/master/index.js -->
