--- a/index.html
+++ b/index.html
@@ -1,20 +1,54 @@
-<!-- Curious how I made this?
-
-https://threejs.org/examples/#webgl_buffergeometry_drawrange
-
-https://3dtransforms.desandro.com/cube
--->
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF=8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Raymond Wong // raymond.exe</title>
+        <style>
+            .fade-in-text {
+                font-family: Helvetica, sans-serif;
+                font-size: 100px;
+                animation: fadeIn 5s;
+                position: absolute;
+                top: 35%;
+                width: 100%;
+                text-align: center;
+            }
+            @keyframes fadeIn {
+                0% {
+                    opacity: 0;
+                    scale: 0.9;
+                }
+                5% {
+                    opacity: 0;
+                    scale: 0.975;
+                }
+                100% {
+                    opacity: 1;
+                    scale: 1;
+                }
+            }
+            body {
+                overflow: hidden;
+            }
+            a {
+                color: white;
+                text-decoration: none;
+                font-style: italic;
+            }:hover {
+                color: rgb(59, 150, 255);
+            }
+        </style>
+        <title>𝙍𝙞𝙘𝙝𝙞𝙚 𝙍𝙖𝙮𝙢𝙤𝙣𝙙 𝙒𝙤𝙣𝙜</title>
+        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
-    <body style="background-color:black;">
-        <canvas class="webgl"></canvas>
-        <script type="module" src="index.js"></script>
+    <body style="background-color:rgb(40, 40, 40);">
+        <div class="fade-in-text">
+            <b style="color: rgb(240, 240, 240); font-size: 75%;">Sorry, you're early!</b>
+            <p style="color: rgb(240, 240, 240); font-size: 30%;">I'm still working on this site, <a href="https://docs.google.com/document/d/1GzQwmIMB-Ievde9YCOjM24SOkRWlWNjb860olCAm4ww/edit?usp=sharing" target="_blank">view my resume instead?</a></p>
+          </div>
+          <!-- <iframe src="https://docs.google.com/document/d/e/2PACX-1vQAFMxaqvTsmnI0zOn87xVMsOoMz36b8sToR-LRQyI5TuT14sYINsCE3VHk2bl0jp-q9nL_Qm8MhgWk/pub?embedded=true" style="width: 100%;height: auto;"></iframe> -->
     </body>
 </html>
+<!-- Made by yours truly 😉 ~Raymond -->
+<!-- https://github.com/Raymond-exe/raymond-exe.github.io/ -->
