Reorganized CSS into main.css

--- a/index.html
+++ b/index.html
@@ -4,41 +4,7 @@
         <meta charset="UTF=8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <style>
-            .fade-in-text {
-                font-family: Helvetica, sans-serif;
-                font-size: 100px;
-                animation: fadeIn 5s;
-                position: absolute;
-                top: 35%;
-                width: 100%;
-                text-align: center;
-            }
-            @keyframes fadeIn {
-                0% {
-                    opacity: 0;
-                    scale: 0.9;
-                }
-                5% {
-                    opacity: 0;
-                    scale: 0.975;
-                }
-                100% {
-                    opacity: 1;
-                    scale: 1;
-                }
-            }
-            body {
-                overflow: hidden;
-            }
-            a {
-                color: white;
-                text-decoration: none;
-                font-style: italic;
-            }:hover {
-                color: rgb(59, 150, 255);
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="main.css"/>
         <title>𝙍𝙞𝙘𝙝𝙞𝙚 𝙍𝙖𝙮𝙢𝙤𝙣𝙙 𝙒𝙤𝙣𝙜</title>
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
