--- a/index.html
+++ b/index.html
@@ -4,14 +4,21 @@
         <meta charset="UTF=8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Look at you sneaky person, breaking in early O_O -->
+        <!-- <meta http-equiv="refresh" content="0;URL=/home.html" /> -->
         <link rel="stylesheet" type="text/css" href="main.css"/>
+        <style>
+        body {
+            overflow: hidden; /* Hide scrollbars */
+        }
+        </style>
         <title>𝙍𝙞𝙘𝙝𝙞𝙚 𝙍𝙖𝙮𝙢𝙤𝙣𝙙 𝙒𝙤𝙣𝙜</title>
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
     <body style="background-color:rgb(40, 40, 40);">
         <div class="fade-in-text">
             <b style="color: rgb(240, 240, 240); font-size: 75%;">Sorry, you're early!</b>
-            <p style="color: rgb(240, 240, 240); font-size: 30%;">I'm still working on this site, <a href="/r.html" target="_blank">view my resume instead?</a></p>
+            <p style="color: rgb(240, 240, 240); font-size: 30%;">I'm still working on this site, <a class="inlineLink" href="/r.html" target="_blank">view my resume instead?</a></p>
           </div>
     </body>
 </html>
