Added style be default to fix shifting bug

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
     <body style="background-color:rgb(40, 40, 40);">
-        <div id="mySidenav" class="sidenav">
+        <div id="mySidenav" class="sidenav" style="width: 0px">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a id="logo" href="#hostname">Raymond Wong</a>
             <a href="#whoami">About Me</a>
