Added original images to homepage

--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
         <div id="mySidenav" class="sidenav" style="width: 0px">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a id="logo" href="#hostname">Raymond Wong</a>
+            <p></p> <!-- Spacer -->
             <a href="#whoami">About Me</a>
             <a href="#history">Experience</a>
             <a href="#hwinfo">Education</a>
@@ -25,31 +26,31 @@
         <div id="parallax-effect">
             <section>
                 <div class="parallax-container" style="background-image: 
-                url('http://pm1.narvii.com/6230/f9754d663e9ced69a09dda6f30dd60093cddd2ec_00.jpg');">
+                url('/images/nightwalker.jpeg');">
                 <h2>I have brought peace, freedom, justice, and security to my new empire.</h2>
                 </div>
                 <div class="parallax-container" style="background-image: 
-                url('https://images2.minutemediacdn.com/image/fetch/w_736,h_485,c_fill,g_auto,f_auto/https%3A%2F%2Fdorksideoftheforce.com%2Ffiles%2F2021%2F03%2FREVENGE-OF-THE-SITH-KENOBI003.jpg-850x544.jpg');">
+                url('/images//soarin.jpeg');">
                 <h2>Your new empire?</h2>
                 </div>
                 <div class="parallax-container" style="background-image: 
-                url('http://pm1.narvii.com/6230/f9754d663e9ced69a09dda6f30dd60093cddd2ec_00.jpg');">
+                url('/images/stairway.jpg');">
                 <h2>Don't make me kill you.</h2>
                 </div>
                 <div class="parallax-container" style="background-image: 
-                url('https://images2.minutemediacdn.com/image/fetch/w_736,h_485,c_fill,g_auto,f_auto/https%3A%2F%2Fdorksideoftheforce.com%2Ffiles%2F2021%2F03%2FREVENGE-OF-THE-SITH-KENOBI003.jpg-850x544.jpg');">
+                url('/images/steven_univserse.png');">
                 <h2>Anakin, my allegiance is to the Republic, to Democracy!</h2>
                 </div>
                 <div class="parallax-container" style="background-image: 
-                url('http://pm1.narvii.com/6230/f9754d663e9ced69a09dda6f30dd60093cddd2ec_00.jpg');">
+                url('/images/0-8-4.jpeg');">
                 <h2>If you are not with me, then you are my enemy.</h2>
                 </div>
                 <div class="parallax-container" style="background-image: 
-                url('https://images2.minutemediacdn.com/image/fetch/w_736,h_485,c_fill,g_auto,f_auto/https%3A%2F%2Fdorksideoftheforce.com%2Ffiles%2F2021%2F03%2FREVENGE-OF-THE-SITH-KENOBI003.jpg-850x544.jpg');">
+                url('/images/hotel-california.jpg');">
                 <h2>Only a Sith deals in absolutes. I will do what I must.</h2>
                 </div>
                 <div class="parallax-container" style="background-image: 
-                url('http://pm1.narvii.com/6230/f9754d663e9ced69a09dda6f30dd60093cddd2ec_00.jpg');">
+                url('/images/S-T-A-Y.jpg');">
                 <h2>You will try.</h2>
                 </div>
                 <div class="parallax-container" style="background-image: 
