Updated font on index.html
Also replace card system in main.css and home.html

--- a/home.html
+++ b/home.html
@@ -38,15 +38,41 @@
                 <div class="parallax-container" id="history" style="background-image:
                 url('/images/stairway.jpg');">
                     <h2>Experience</h2>
-                    <div class="card-container">
-                        <div>hello</div>
-                        <div>hello</div>
-                        <div>hello</div>
+                    <div class="row">
+                        <div class="column">
+                            <div class="content">
+                                <img src="/images/academic-decommitment.jpeg" style="width:100%;">
+                                <h3>CPP UAV Laboratory</h3>
+                                <p>This is subtext</p>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="content">
+                                <img src="/images/academic-decommitment.jpeg" style="width:100%;">
+                                <h3>ImagineFun LLC</h3>
+                                <p>This is subtext</p>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="content">
+                                <img src="/images/academic-decommitment.jpeg" style="width:100%;">
+                                <h3>Galaxy Martial Arts</h3>
+                                <p>This is subtext</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="parallax-container" id="hwinfo" style="background-image:
-                url('/images/steven-universe.jpg');">
+                url('/images/steven-universe.jpg'); padding-bottom:10%;">
                     <h2>Education</h2>
+                    <div class="card-container">
+                        <div style="width:10%">hello</div>
+                        <div style="width:37.5%;">
+                            <img style="width:100%" src="/images/pictureframe.png">
+                            <h3>California Polytechnic State University, Pomona</h3>
+                        </div>
+                        <div style="width:10%">hello</div>
+                    </div>
                 </div>
                 <div class="parallax-container" id="ps" style="background-image:
                 url('/images/0-8-4.jpeg');">
