Added sidebar open button

--- a/index.html
+++ b/index.html
@@ -23,4 +23,4 @@
     </body>
 </html>
 <!-- Made by yours truly 😉 ~Raymond -->
-<!-- https://github.com/Raymond-exe/raymond-exe.github.io/ -->
+<!-- source: https://github.com/Raymond-exe/raymond-exe.github.io/ -->
