--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
         <title>Home</title>
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
-    <body style="background-color:rgb(40, 40, 40); height: 100%;">
+    <body style="background-color:black; height: 100%;">
         <div id="mySidenav" class="sidenav" style="width: 0px">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <a id="logo" href="#hostname">Raymond Wong</a>
@@ -38,6 +38,7 @@
                 <div class="parallax-container" id="whoami" style="background-image:
                 url('/images//soarin.jpeg');">
                     <h2>About Me</h2>
+                    <p>Raised in southern California, I've had an interest in working with computers since I started middle school. Motivated by my own curiosity and driven to create something new, I am a quick learner who enjoys working in a team as much as I enjoy working on my own.</p>
                 </div>
                 <div class="parallax-container" id="history" style="background-image:
                 url('/images/stairway.jpg');">
@@ -47,21 +48,28 @@
                             <div class="content">
                                 <img src="/images/academic-decommitment.jpeg" style="width:100%;">
                                 <h3>CPP UAV Laboratory</h3>
-                                <p>This is subtext</p>
+                                <p>- Overseen by Cal Poly Pomona Dr. Subodh Bhandari and funded by Lockheed-Martin.</p>
+                                <p>- Designed an image recognition system utilizing a TensorFlow Lite machine learning model to classify images in real-time.</p>
+                                <!-- <p>- Worked in coordination with other subsystem teams to integrate the above image recognition system into our UAV.</p> -->
+                                <p>- The team's current goal is to have two competition-ready UAVs in time to compete in the AUVSI-SUAS competition in June 2023.</p>
                             </div>
                         </div>
                         <div class="column">
                             <div class="content">
                                 <img src="/images/academic-decommitment.jpeg" style="width:100%;">
                                 <h3>ImagineFun LLC</h3>
-                                <p>This is subtext</p>
+                                <p>- Worked heavily with Java, Javascript, & Typescript.</p>
+                                <p>- Collaborated in a team of other developers to complete weekly “sprints” of tasks.</p>
+                                <p>- Currently the lead developer working on automated 3D model rendering & image compositing.</p>
                             </div>
                         </div>
                         <div class="column">
                             <div class="content">
                                 <img src="/images/academic-decommitment.jpeg" style="width:100%;">
                                 <h3>Galaxy Martial Arts</h3>
-                                <p>This is subtext</p>
+                                <p>- Worked under the direction of Master J. Safa to help instruct, organize, and run classes.</p>
+                                <p>- Worked with students as young as 7 years to help develop listening skills & obedience.</p>
+                                <p>- Resigned in April of 2020 over concerns related to the then-growing coronavirus pandemic.</p>
                             </div>
                         </div>
                     </div>
