Sorry AV, you weren't the only one I applied to

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body style="background-color:rgb(40, 40, 40);">
         <div class="fade-in-text">
-            <b style="color: rgb(240, 240, 240); font-size: 75%;font-family: 'Playfair Display', sans-serif;">Sorry AeroVironment, you're early!</b>
+            <b style="color: rgb(240, 240, 240); font-size: 75%;font-family: 'Playfair Display', sans-serif;">Sorry, you're early!</b>
             <p style="color: rgb(240, 240, 240); font-size: 30%;font-family: 'Lato', sans-serif;">I'm still working on this site, <a class="inlineLink" href="/r.html" target="_blank">view my resume instead?</a></p>
           </div>
     </body>
