Changed image links to be inline

--- a/home.html
+++ b/home.html
@@ -29,19 +29,16 @@
 
         <div id="parallax-effect">
             <section style="height:100%">
-                <div class="parallax-container" id="hostname" style="background-image:
-                url('/images/nightwalker.jpeg');">
+                <div class="parallax-container" id="hostname" style="background-image:url('/images/nightwalker.jpeg');">
                     <img src="/images/full_icon.png" style="width: 20%;">
                     <h1>Raymond Wong</h1>
                     <h2>Computer Engineering</h2>
                 </div>
-                <div class="parallax-container" id="whoami" style="background-image:
-                url('/images//soarin.jpeg');">
+                <div class="parallax-container" id="whoami" style="background-image:url('/images//soarin.jpeg');">
                     <h2>About Me</h2>
                     <p>Raised in southern California, I've had an interest in working with computers since I started middle school. Motivated by my own curiosity and driven to create something new, I am a quick learner who enjoys working in a team as much as I enjoy working on my own.</p>
                 </div>
-                <div class="parallax-container" id="history" style="background-image:
-                url('/images/stairway.jpg');">
+                <div class="parallax-container" id="history" style="background-image:url('/images/stairway.jpg');">
                     <h2>Experience</h2>
                     <div class="row">
                         <div class="column">
@@ -74,22 +71,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="parallax-container" id="hwinfo" style="background-image:
-                url('/images/steven-universe.jpg'); padding-bottom:10%;">
+                <div class="parallax-container" id="hwinfo" style="background-image:url('/images/steven-universe.jpg'); padding-bottom:10%;">
                     <h2>Education</h2>
                     <div class="card-container">
                     </div>
                 </div>
-                <div class="parallax-container" id="ps" style="background-image:
-                url('/images/0-8-4.jpeg');">
+                <div class="parallax-container" id="ps" style="background-image:url('/images/0-8-4.jpeg');">
                     <h2>Skills & Hobbies</h2>
                 </div>
-                <div class="parallax-container" style="background-image:
-                url('/images/hotel-california.jpg');">
+                <div class="parallax-container" style="background-image:url('/images/hotel-california.jpg');">
                     <h2>Resume</h2>
                 </div>
-                <div class="parallax-container" id="ping" style="background-image:
-                url('/images/S-T-A-Y.jpg');">
+                <div class="parallax-container" id="ping" style="background-image:url('/images/S-T-A-Y.jpg');">
                     <h2>Contact Information</h2>
                 </div>
             </section>
