--- a/home.html
+++ b/home.html
@@ -37,6 +37,7 @@
                 <div class="parallax-container" id="whoami" style="background-image:url('/images//soarin.jpeg');">
                     <h2>About Me</h2>
                     <p>Raised in southern California, I've had an interest in working with computers since I started middle school. Motivated by my own curiosity and driven to create something new, I am a quick learner who enjoys working in a team as much as I enjoy working on my own.</p>
+                    <h2>What Drives Me?</h2>
                 </div>
                 <div class="parallax-container" id="history" style="background-image:url('/images/stairway.jpg');">
                     <h2>Experience</h2>
