--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body style="background-color:rgb(40, 40, 40);">
         <div class="fade-in-text">
             <b style="color: rgb(240, 240, 240); font-size: 75%;font-family: 'Playfair Display', sans-serif;">Sorry, you're early!</b>
-            <p style="color: rgb(240, 240, 240); font-size: 30%;font-family: 'Lato', sans-serif;">I'm still working on this site, <a class="inlineLink" href="/r.html" target="_blank">view my resume instead?</a></p>
+            <p style="color: rgb(240, 240, 240); font-size: 30%;font-family: 'Lato', sans-serif;">I'm still working on this site, <a class="inlineLink" href="/b.html" target="_blank">want to play Blackjack instead?</a></p>
           </div>
     </body>
 </html>
