--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
             <b style="color: rgb(240, 240, 240); font-size: 75%;font-family: 'Playfair Display', sans-serif;">Sorry, you're early!</b>
             <p style="color: rgb(240, 240, 240); font-size: 30%;font-family: 'Lato', sans-serif;">I'm still working on this site, <a class="inlineLink" href="/b.html" target="_blank">want to play Blackjack instead?</a></p>
           </div>
+
+          <footer>
+            <p>Need to get in touch?</p>
+            <a href="https://www.linkedin.com/in/raymond-exe" style="text-decoration:none">
+                <img alt="LinkedIn" src="https://img.shields.io/badge/LinkedIn-0A66C2?style=for-the-badge&logo=linkedin&logoColor=white">
+            </a>
+            <a href="https://github.com/raymond-exe" style="text-decoration:none">
+                <img alt="GitHub" src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white">
+            </a>
+            <a href="mailto:raymondwong.exe@gmail.com" style="text-decoration:none">
+                <img alt="Email" src="https://img.shields.io/badge/Email-EA4335?style=for-the-badge&logo=gmail&logoColor=white">
+            </a>
+          </footer>
     </body>
 </html>
 <!-- Made by yours truly 😉 ~Raymond -->
