home page rewrite

--- a/home.html
+++ b/home.html
@@ -9,7 +9,34 @@
         <title>𝙍𝙞𝙘𝙝𝙞𝙚 𝙍𝙖𝙮𝙢𝙤𝙣𝙙 𝙒𝙤𝙣𝙜</title>
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
-    <body style="background-color:black; height: 100%;">
+    <body>
+        <div>
+            <h1 class="fade-in-text" style="color:rgb(240, 240, 240); font-size:7.5vw; font-family:'Playfair Display', sans-serif;">Raymond Wong<br><br></h1>
+            <p  class="fade-in-text" style="color:rgb(240, 240, 240); font-size:3vw; font-family: 'Lato', sans-serif;"><br><br>Computer Engineering Undergraduate</p>
+            <img src="./images/steven-universe.jpg" id="cover-image">
+        </div>
+        <div id="container">
+            <div class="box" style="background-color: #ED474A;">
+                <img src="./images/hotel-california.jpg" class="thumbnail">
+                <p>About me</p>
+            </div>
+            <div class="box" style="background-color: #57A773;">
+                <img src="./images/steven-universe.jpg" class="thumbnail">
+                <p>Experience</p>
+            </div>
+            <div class="box" style="background-color: #F7F1DF;">
+                <img src="./images/stairway.jpg" class="thumbnail">
+                <p>Resume</p>
+            </div>
+            <div class="box" style="background-color: #E2970B;">
+                <img src="./images/0-8-4.jpeg" class="thumbnail">
+                <p>Projects + Hobbies</p>
+            </div>
+            <div class="box" style="background-color: #08B2E3;">
+                <img src="./images/soarin.jpeg" class="thumbnail">
+                <p>Contact me</p>
+            </div>
+        </div>
     </body>
 </html>
 
