[WIP] box-content stuff

--- a/home.html
+++ b/home.html
@@ -11,30 +11,33 @@
     </head>
     <body>
         <div>
-            <h1 class="fade-in-text" style="color:rgb(240, 240, 240); font-size:7.5vw; font-family:'Playfair Display', sans-serif;">Raymond Wong<br><br></h1>
+            <img class="fade-in-text cover-icon" src="./images/cpp.png">
+            <h1 class="fade-in-text" style="color:rgb(240, 240, 240); font-size:7vw; font-family:'Playfair Display', sans-serif;">Raymond Wong<br><br></h1>
             <p  class="fade-in-text" style="color:rgb(240, 240, 240); font-size:3vw; font-family: 'Lato', sans-serif;"><br><br>Computer Engineering Undergraduate</p>
             <img src="./images/steven-universe.jpg" id="cover-image">
         </div>
-        <div id="container">
+        <div id="box-container">
             <div class="box" style="background-color: #ED474A;">
                 <img src="./images/hotel-california.jpg" class="thumbnail">
-                <p>About me</p>
+                <p class="box-title">About me</p>
+                <div class="box-content">Hello world! This is some placeholder text that will eventually be replaced (at least, I hope so).</div>
             </div>
             <div class="box" style="background-color: #57A773;">
                 <img src="./images/steven-universe.jpg" class="thumbnail">
-                <p>Experience</p>
+                <p class="box-title">Experience</p>
             </div>
-            <div class="box" style="background-color: #F7F1DF;">
+            <div class="box" style="background-color: #8a867b;">
                 <img src="./images/stairway.jpg" class="thumbnail">
-                <p>Resume</p>
+                <p class="box-title">Resume</p>
+                <img class="box-content" style="width:auto; height:45%; image-rendering:pixelated;" src="./images/resume_qr.png">
             </div>
             <div class="box" style="background-color: #E2970B;">
                 <img src="./images/0-8-4.jpeg" class="thumbnail">
-                <p>Projects + Hobbies</p>
+                <p class="box-title">Projects + Hobbies</p>
             </div>
             <div class="box" style="background-color: #08B2E3;">
                 <img src="./images/soarin.jpeg" class="thumbnail">
-                <p>Contact me</p>
+                <p class="box-title">Contact me</p>
             </div>
         </div>
     </body>
