More setup for expand & redirect links

--- a/home.html
+++ b/home.html
@@ -21,6 +21,8 @@
                 <img src="./images/hotel-california.jpg" class="thumbnail">
                 <p class="box-title">About me</p>
                 <div class="box-content">Hello world! This is some placeholder text that will eventually be replaced (at least, I hope so).</div>
+                <button class="box-link"><i>Click to Expand</i></button>
+                <!-- TODO logic for buttons -->
             </div>
             <div class="box" style="background-color: #57A773;">
                 <img src="./images/steven-universe.jpg" class="thumbnail">
@@ -30,6 +32,7 @@
                 <img src="./images/stairway.jpg" class="thumbnail">
                 <p class="box-title">Resume</p>
                 <img class="box-content" style="width:auto; height:45%; image-rendering:pixelated;" src="./images/resume_qr.png">
+                <a href="./r.html" class="box-link"><i>Click to view</i></a>
             </div>
             <div class="box" style="background-color: #E2970B;">
                 <img src="./images/0-8-4.jpeg" class="thumbnail">
