--- a/home.html
+++ b/home.html
@@ -11,6 +11,13 @@
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
     <body>
+        <div id="nav-bar">
+            <div class="bg"></div>
+            <img src="./images/full_icon.png" style="height:50%;">
+            <div class="contact-info">
+                <p>CONTACT INFO</p>
+            </div>
+        </div>
         <div>
             <img class="fade-in-text cover-icon" src="./images/cpp.png">
             <h1 class="fade-in-text" style="color:rgb(240, 240, 240); font-size:7vw; font-family:'Playfair Display', sans-serif;">Raymond Wong<br><br></h1>
