Changing thumbnail image for 'Experience'

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
                 <button class="box-link" onclick="expandAboutMe()"><i>Click to Expand</i></button>
             </div>
             <div class="box" style="background-color: #57A773;">
-                <img src="./images/steven-universe.jpg" class="thumbnail">
+                <img src="./images/building-9.jpg" class="thumbnail">
                 <p class="box-title">Experience</p>
                 <button class="box-link" onclick="expandExperience()"><i>Click to Expand</i></button>
             </div>
