Cleaning up clutter

--- a/temp.html
+++ b/temp.html
@@ -1,14 +1,8 @@
+<!-- NEVER to be used as a page itself, only an easy redirect -->
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF=8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="refresh" content="0;URL=./index.html" />
-        <link rel="stylesheet" type="text/css" href="main.css"/>
         <title>Loading...</title>
-        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
-    <body style="background-color:rgb(40, 40, 40);">
-    </body>
 </html>
