HTML layout adjustments

--- a/home.html
+++ b/home.html
@@ -11,6 +11,9 @@
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
     <body>
+        <div id="overlay">
+            <!-- WIP: Pop-ups for each sub-section -->
+        </div>
         <div id="nav-bar">
             <div class="bg"></div>
             <img src="./images/full_icon.png" style="height:50%;">
@@ -18,10 +21,10 @@
                 <p>CONTACT INFO</p>
             </div>
         </div>
-        <div>
+        <div> <!-- "Middle" textbox + background -->
             <img class="fade-in-text cover-icon" src="./images/cpp.png">
-            <h1 class="fade-in-text" style="color:rgb(240, 240, 240); font-size:7vw; font-family:'Playfair Display', sans-serif;">Raymond Wong<br><br></h1>
-            <p  class="fade-in-text" style="color:rgb(240, 240, 240); font-size:3vw; font-family: 'Lato', sans-serif;"><br><br>Computer Engineering Undergraduate</p>
+            <h1 class="fade-in-text" style="color:rgb(240, 240, 240); font-size:7vw; font-family:'Playfair Display', sans-serif;">Raymond Wong<br></h1>
+            <p  class="fade-in-text" style="color:rgb(240, 240, 240); font-size:3vw; font-family: 'Lato', sans-serif;"><br><br><br><br><br>Computer Engineering Undergraduate</p>
             <img src="./images/steven-universe.jpg" id="cover-image">
         </div>
         <div id="box-container">
