temp testing url...

--- a/temp.html
+++ b/temp.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="refresh" content="0;URL=./index.html" />
+        <meta http-equiv="refresh" content="0;URL=./soybean/19months.html" />
         <title>Loading...</title>
     </head>
 </html>
