--- a/pika.html
+++ b/pika.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta http-equiv="refresh" content="0;URL=./index.html" />
+        <meta http-equiv="refresh" content="0;URL=./soybean/19months.html" />
         <title>Loading...</title>
         <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/597/597874.png">
     </head>
